<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="convert">convert</string>
    <string name="edit">edit</string>
    <string name="search">search</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="can_t_show_the_map">Can\'t show the map</string>
    <!-- MapBoxToken -->
    <string name="access_token">pk.eyJ1IjoibmV4aXNsdWNpcyIsImEiOiJja3k0ZXFkNmwwN240MnZxYzlybm5tNmJwIn0.hWrbWExHjXPP2I0O7CXIGA</string>
    <string name="add_photos">Add Photos</string>
    <string name="click_on_one_of_the_picture_below_to_choose">Click on one of the picture below to choose!</string>
    <string name="main_picture">Main picture</string>
    <string name="add_photo_to_list">Add photo to List</string>
    <string name="name">Name</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_house">Add House</string>
    <string name="refresh_house">Refresh Data</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_the_home_has_been_sold">Confirm the home has been sold?</string>
    <string name="price">Price</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="point_of_interest">Points of interest:</string>
    <string name="shops">Shops</string>
    <string name="school">School</string>
    <string name="station">Station</string>
    <string name="park">Park</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="search_for_a_date">Search for a date</string>
    <string name="country">country</string>
    <string name="postal_code">Postal Code</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="adress">Adress:</string>
    <string name="number_of_photo_of_the_property_min">Number of photo of the property min</string>
    <string name="bathroom_number">Bathroom number</string>
    <string name="bedroom_number">Bedroom number</string>
    <string name="room_number">Room number</string>
    <string name="price_max">Price max</string>
    <string name="surface_max">Surface max</string>
    <string name="surface_min">Surface min</string>
    <string name="sold">Sold</string>
    <string name="available">Available</string>
    <!-- Spinner -->
    <string-array name="Type">Spinner HouseTypes
        <item>House</item>
        <item>PentHouse</item>
        <item>Apartment</item>
        <item>Duplex</item>
    </string-array>
    <string-array name="SearchType">Spinner HouseTypes
        <item>All</item>
        <item>House</item>
        <item>PentHouse</item>
        <item>Apartment</item>
        <item>Duplex</item>
    </string-array>
    <string-array name="MoneyType">Spinner MoneyTypes
        <item>Dollar</item>
        <item>Euro</item>
    </string-array>
</resources>
