<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchActivity.SearchActivity"
    android:orientation="vertical">

    <include
    android:id="@+id/toolbar"
    layout="@layout/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <CheckBox
        android:id="@+id/searchAvailableBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available"/>

    <CheckBox
        android:id="@+id/searchSoldBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sold"/>

</LinearLayout>
    <Spinner
        android:id="@+id/searchTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp" />

    <EditText
        android:id="@+id/searchSurfaceMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/surface_min"
        android:layout_gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/searchSurfaceMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/surface_max"
        android:layout_gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/searchPriceMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price_max"
        android:layout_gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/searchRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/room_number"
        android:layout_gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/searchBedRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bedroom_number"
        android:layout_gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/searchBathRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/bathroom_number"
        android:layout_gravity="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/searchPhotoMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number_of_photo_of_the_property_min"
        android:layout_gravity="center"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/adress"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/searchCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/searchStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/searchPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/postal_code" />

    <EditText
        android:id="@+id/searchCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/country" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/point_of_interest"
                android:gravity="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/checkSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school"/>
                <CheckBox
                    android:id="@+id/checkShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"/>
                <CheckBox
                    android:id="@+id/checkPark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/park"/>
                <CheckBox
                    android:id="@+id/checkTrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station"/>
            </LinearLayout>

        <TextView
            android:id="@+id/searchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_for_a_date"/>

            <Button
                android:id="@+id/searchConfirmBtn"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm"
                android:backgroundTint="@color/light_blue_A200"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>