<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/convert"
        android:icon="@drawable/baseline_attach_money_green_a700_24dp"
        android:title="@string/convert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addMenu"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/add_house"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/baseline_mode_edit_white_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>
